--- a/index.html
+++ b/index.html
@@ -281,137 +281,149 @@ section {
 
 </style>
 <body>
-  <header>
-      <nav>
-        <ul>
-          <li><img src="IMG/logo.png" alt=""></li>
-          <li><a href="index.html">Home Page</a></li>
-          <li><a href="aboutup.html">About Us</a></li>
-          <li><a href="serives.html">Services</a></li>
-          <li><a href="package.html">Packages</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-      </nav>
-  </header>
 
-  <section class="banner-container">
-    <div class="banner-image">
-      <img src="https://imgs.search.brave.com/OHFCZOK4KdnPdrSudk-lCUzpfRXQslHduZ1yv82RRkE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA1LzY5LzgyLzA3/LzM2MF9GXzU2OTgy/MDc3M190NXVLNGhl/cXQ0RmRIbDhBZ2FJ/UjN1ZVVxckpvTGhZ/dy5qcGc" alt="Party Time Banner">
-    </div>
-    <div class="custom-package">
-      <img src="" alt="">
-      <h1>Custom Packages</h1>
-      <p>Contact us to create a personalized package tailored to your specific needs.</p>
-      <p>At Party Time, we understand that every event is unique, and we're here to help you create a personalized experience that exceeds your expectations. Our custom packages are designed to give you the flexibility to tailor every aspect of your event to your specific needs and preferences.</p>
-      <a href="package.html" class="btn" role="button">Choose Package</a>
-    </div>
-  </section>
+<header>
+<nav>
+<ul>
+<li><img src="images/logo.png" alt=""></li>
+<li><a href="index.html">Home Page</a></li>
+<li><a href="aboutup.html">About Us</a></li>
+<li><a href="serives.html">Services</a></li>
+<li><a href="package.html">Packages</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+</header>
 
+<section class="banner-container">
+<div class="banner-image">
+<img src="https://imgs.search.brave.com/OHFCZOK4KdnPdrSudk-lCUzpfRXQslHduZ1yv82RRkE/rs:fit:860:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA1LzY5LzgyLzA3/LzM2MF9GXzU2OTgy/MDc3M190NXVLNGhl/cXQ0RmRIbDhBZ2FJ/UjN1ZVVxckpvTGhZ/dy5qcGc" alt="Party Time Banner">
+</div>
 
-  
-  
+<div class="custom-package">
+<img src="" alt="">
+<h1>Custom Packages</h1>
+<p>Contact us to create a personalized package tailored to your specific needs.</p>
+<p>At Party Time, we understand that every event is unique, and we're here to help you create a personalized experience that exceeds your expectations.</p>
+<a href="package.html" class="btn" role="button">Choose Package</a>
+</div>
+</section>
 
-  <section id="packages" role="region" aria-labelledby="packages-heading">
-    <div class="package" role="article">
-      <h3>Bronze Package</h3>
-      <ul>
-        <li>Room decorations - balloons, banners</li>
-        <li>Table decorations - centrepieces, gifts</li>
-        <li>DJ entertainment</li>
-        <li>Cold buffet</li>
-        <li>-</li>
-      </ul>
-      <p>Price: $XXX</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-  
-    <div class="package" role="article">
-      <h3>Silver Package</h3>
-      <ul>
-        <li>All from Bronze package plus:</li>
-        <li>Invitation design and handling</li>
-        <li>Party cost clear up</li>
-        <li>Live band entertainment</li>
-        <li>Cold buffet and soft drinks</li>
-      </ul>
-      <p>Price: $XXX</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-  
-    <div class="package" role="article">
-      <h3>Gold Package</h3>
-      <ul>
-        <li>All from Silver package plus:</li>
-        <li>Staff in attendance to ensure complete perfection</li>
-        <li>Finding guest accommodation, booking transport</li>
-        <li>Live band entertainment and magician</li>
-        <li>Hot and Cold buffet and soft drinks</li>
-      </ul>
-      <p>Price: $XXX</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-  </section>
+<section id="packages">
 
-  <section id="image-gallery" role="region" aria-labelledby="gallery-heading">
-    <div class="image-column">
-      <img src="IMG/room.jpg" alt="Gallery Image 1">
-      <h4>Room Decoration</h4>
-      <p>
-        Choose a captivating theme to set the tone for your event, whether it's formal or casual. Illuminate the venue with ambient lighting like string lights or spotlights to create a desired atmosphere. Coordinate the color scheme of decorations, including tablecloths and banners, with the chosen theme for a visually cohesive and memorable experience</p>
-    </div>
-    <div class="image-column">
-      <img src="IMG/Dj.jpg" alt="Gallery Image 2">
-      <h4>DJ Setup</h4>
-      <p>Create a dynamic DJ station by setting up a sturdy table in a designated area, strategically positioned for the DJ to have a clear view of the crowd. Equip the space with essential DJ gear, including turntables, a mixer, laptop, and quality speakers to ensure a seamless musical experience. Elevate the visual impact by designing.
-      </p>
-    </div>
-    <div class="image-column">
-      <img src="IMG/food.jpg" alt="Gallery Image 3">
-      <h4>Cold Buffet</h4>
-      <p>Craft a delightful dining experience by thoughtfully planning a menu for the cold buffet that caters to the diverse preferences and dietary needs of your guests. Elevate the presentation by arranging the culinary offerings on the buffet table with artistic flair, utilizing elevated stands, decorative platters, and tasteful garnishes.</p>
-    </div>
-    <div class="image-column">
-      <img src="IMG/add.jpeg" alt="Gallery Image 4">
-      <h4>Additional Considerations</h4>
-      <p>Thoughtfully arrange seating to enhance the flow of your event, creating cozy conversation areas for guests to mingle and enjoy the festivities. Beyond the musical ambiance provided by the DJ, enrich the overall experience by incorporating diverse forms of entertainment. Consider including engaging games or interactive activities.</p>
-    </div>
-  </section>
+<div class="package">
+<h3>Bronze Package</h3>
+<ul>
+<li>Room decorations - balloons, banners</li>
+<li>Table decorations - centrepieces, gifts</li>
+<li>DJ entertainment</li>
+<li>Cold buffet</li>
+<li>-</li>
+</ul>
+<p>Price: $XXX</p>
+<a href="#" class="btn">Book Now</a>
+</div>
 
-  <footer>
-    <div class="about-us">
-      <h3>About Us</h3>
-      <ul>
-        <li>Party Time is your premier destination for unforgettable events and celebrations.</li>
-        <li>With our expert team and wide range of services, we ensure that every occasion is a spectacular success.</li>
-      </ul>
-    </div>
-    <div class="container">
-      <div class="services">
-        <h3>Package</h3>
-        <ul>
-          <li>Bronze Package</li>
-          <li>Silver Package</li>
-          <li>Gold Package</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Our Services</h3>
-        <ul>
-          <li>Themed Events</li>
-          <li>Marquee Parties</li>
-          <li>Special Celebrations</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Contact Address</h3>
-        <ul>
-          <li>Room No.216, Shop House No.2, Time City Complex, <br> Kamayut Township, Yangon</li>
-          <li>Call Now; +959943940323</li>
-        </ul>
-      </div>
-    </div>
-    <p>&copy; 2024 Party Time. All rights reserved SOE MOE NAING.</p>
-  </footer>
+<div class="package">
+<h3>Silver Package</h3>
+<ul>
+<li>All from Bronze package plus:</li>
+<li>Invitation design and handling</li>
+<li>Party cost clear up</li>
+<li>Live band entertainment</li>
+<li>Cold buffet and soft drinks</li>
+</ul>
+<p>Price: $XXX</p>
+<a href="#" class="btn">Book Now</a>
+</div>
+
+<div class="package">
+<h3>Gold Package</h3>
+<ul>
+<li>All from Silver package plus:</li>
+<li>Staff in attendance to ensure complete perfection</li>
+<li>Finding guest accommodation, booking transport</li>
+<li>Live band entertainment and magician</li>
+<li>Hot and Cold buffet and soft drinks</li>
+</ul>
+<p>Price: $XXX</p>
+<a href="#" class="btn">Book Now</a>
+</div>
+
+</section>
+
+<section id="image-gallery">
+
+<div class="image-column">
+<img src="images/room.jpg" alt="Gallery Image 1">
+<h4>Room Decoration</h4>
+<p>Choose a captivating theme...</p>
+</div>
+
+<div class="image-column">
+<img src="images/Dj.jpg" alt="Gallery Image 2">
+<h4>DJ Setup</h4>
+<p>Create a dynamic DJ station...</p>
+</div>
+
+<div class="image-column">
+<img src="images/food.jpg" alt="Gallery Image 3">
+<h4>Cold Buffet</h4>
+<p>Craft a delightful dining experience...</p>
+</div>
+
+<div class="image-column">
+<img src="images/add.jpeg" alt="Gallery Image 4">
+<h4>Additional Considerations</h4>
+<p>Thoughtfully arrange seating...</p>
+</div>
+
+</section>
+
+<footer>
+
+<div class="about-us">
+<h3>About Us</h3>
+<ul>
+<li>Party Time is your premier destination for unforgettable events and celebrations.</li>
+<li>With our expert team and wide range of services, we ensure that every occasion is a spectacular success.</li>
+</ul>
+</div>
+
+<div class="container">
+
+<div class="services">
+<h3>Package</h3>
+<ul>
+<li>Bronze Package</li>
+<li>Silver Package</li>
+<li>Gold Package</li>
+</ul>
+</div>
+
+<div class="services">
+<h3>Our Services</h3>
+<ul>
+<li>Themed Events</li>
+<li>Marquee Parties</li>
+<li>Special Celebrations</li>
+</ul>
+</div>
+
+<div class="services">
+<h3>Contact Address</h3>
+<ul>
+<li>Room No.216, Shop House No.2, Time City Complex,<br>Kamayut Township, Yangon</li>
+<li>Call Now; +959943940323</li>
+</ul>
+</div>
+
+</div>
+
+<p>&copy; 2024 Party Time. All rights reserved SOE MOE NAING.</p>
+
+</footer>
+
 </body>
 </html>
 
