--- a/aboutup.html
+++ b/aboutup.html
@@ -294,79 +294,94 @@ section {
 
 </style>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><img src="IMG/logo.png" alt=""></li>
-        <li><a href="index.html">Home Page</a></li>
-        <li><a href="aboutup.html">About Us</a></li>
-        <li><a href="serives.html">Services</a></li>
-        <li><a href="package.html">Packages</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
-</header>
-  
-  <div class="about-us-section">
-    <div class="about-us-container">
-      <div class="about-us-text">
-        <h2>About Us</h2>
-        <p>At Party Time, we believe in creating unforgettable experiences that bring joy and celebration to every occasion. With our passion for event planning and dedication to excellence, we strive to make every event a truly memorable affair.</p>
-        <h3>Our Mission</h3>
-        <p>Our mission is simple: to make your event dreams a reality. Whether you're planning a wedding, corporate gathering, or special celebration, we're here to ensure that every detail is carefully curated to reflect your unique style and vision.</p>
-        <h3>Our Values</h3>
-        <ul>
-          <li>Creativity</li>
-          <li>Quality</li>
-          <li>Customer Satisfaction</li>
-        </ul>
-        <h3>Our Team</h3>
-        <p>Behind every successful event is a dedicated team of professionals. Meet the passionate individuals who bring creativity, expertise, and enthusiasm to every project.</p>
-        <h3>Our Story</h3>
-        <p>Party Time was founded in [year] with a simple mission: to bring joy and celebration to every event. Over the years, we have grown from a small event planning business to a trusted partner for individuals and businesses alike.</p>
-      </div>
-      <div class="about-us-photo">
-        <img src="IMG/photo_2024-02-21_14-03-39.jpg" alt="Party Time">
-      </div>
-    </div>
-  </div>
-  
 
-  <footer>
-    <div class="about-us">
-      <h3>About Us</h3>
-      <ul>
-        <li>Party Time is your premier destination for unforgettable events and celebrations.</li>
-        <li>With our expert team and wide range of services, we ensure that every occasion is a spectacular success.</li>
-      </ul>
-    </div>
-    <div class="container">
-      <div class="services">
-        <h3>Package</h3>
-        <ul>
-          <li>Bronze Package</li>
-          <li>Silver Package</li>
-          <li>Gold Package</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Our Services</h3>
-        <ul>
-          <li>Themed Events</li>
-          <li>Marquee Parties</li>
-          <li>Special Celebrations</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Contact Address</h3>
-        <ul>
-          <li>Room No.216, Shop House No.2, Time City Complex, <br> Kamayut Township, Yangon</li>
-          <li>Call Now; +959943940323</li>
-        </ul>
-      </div>
-    </div>
-    <p>&copy; 2024 Party Time. All rights reserved SOE MOE NAING.</p>
-  </footer>
+<header>
+<nav>
+<ul>
+<li><img src="images/logo.png" alt=""></li>
+<li><a href="index.html">Home Page</a></li>
+<li><a href="aboutup.html">About Us</a></li>
+<li><a href="serives.html">Services</a></li>
+<li><a href="package.html">Packages</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+</header>
+
+<div class="about-us-section">
+<div class="about-us-container">
+
+<div class="about-us-text">
+<h2>About Us</h2>
+<p>At Party Time, we believe in creating unforgettable experiences...</p>
+
+<h3>Our Mission</h3>
+<p>Our mission is simple...</p>
+
+<h3>Our Values</h3>
+<ul>
+<li>Creativity</li>
+<li>Quality</li>
+<li>Customer Satisfaction</li>
+</ul>
+
+<h3>Our Team</h3>
+<p>Behind every successful event...</p>
+
+<h3>Our Story</h3>
+<p>Party Time was founded...</p>
+</div>
+
+<div class="about-us-photo">
+<img src="images/photo_2024-02-21_14-03-39.jpg" alt="Party Time">
+</div>
+
+</div>
+</div>
+
+<footer>
+
+<div class="about-us">
+<h3>About Us</h3>
+<ul>
+<li>Party Time is your premier destination for unforgettable events.</li>
+<li>With our expert team and wide range of services.</li>
+</ul>
+</div>
+
+<div class="container">
+
+<div class="services">
+<h3>Package</h3>
+<ul>
+<li>Bronze Package</li>
+<li>Silver Package</li>
+<li>Gold Package</li>
+</ul>
+</div>
+
+<div class="services">
+<h3>Our Services</h3>
+<ul>
+<li>Themed Events</li>
+<li>Marquee Parties</li>
+<li>Special Celebrations</li>
+</ul>
+</div>
+
+<div class="services">
+<h3>Contact Address</h3>
+<ul>
+<li>Room No.216, Time City Complex, Yangon</li>
+<li>+959943940323</li>
+</ul>
+</div>
+
+</div>
+
+<p>&copy; 2024 Party Time — SOE MOE NAING</p>
+
+</footer>
 
 </body>
 </html>
