--- a/package.html
+++ b/package.html
@@ -280,134 +280,131 @@ section {
 
 </style>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><img src="IMG/logo.png" alt=""></li>
-        <li><a href="index.html">Home Page</a></li>
-        <li><a href="aboutup.html">About Us</a></li>
-        <li><a href="serives.html">Services</a></li>
-        <li><a href="package.html">Packages</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+
+<header>
+<nav>
+<ul>
+<li><img src="images/logo.png" alt=""></li>
+<li><a href="index.html">Home Page</a></li>
+<li><a href="aboutup.html">About Us</a></li>
+<li><a href="serives.html">Services</a></li>
+<li><a href="package.html">Packages</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
 </header>
 
-  <section class="banner-container">
-    <div class="banner-image">
-      <img src="IMG/c.jpg" alt="Party Time Banner">
-    </div>
-    <div class="custom-package">
-      <h1>Custom Packages</h1>
-      <p>Contact us to create a personalized package tailored to your specific needs.</p>
-      <p>At Party Time, we understand that every event is unique, and we're here to help you create a personalized experience that exceeds your expectations. Our custom packages are designed to give you the flexibility to tailor every aspect of your event to your specific needs and preferences.</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-  </section>
+<section class="banner-container">
+<div class="banner-image">
+<img src="images/c.jpg" alt="Party Time Banner">
+</div>
+<div class="custom-package">
+<h1>Custom Packages</h1>
+<p>Contact us to create a personalized package tailored to your specific needs.</p>
+<p>At Party Time, we understand that every event is unique.</p>
+<a href="#" class="btn">Book Now</a>
+</div>
+</section>
 
-  <section class="banner-container">
-    <div class="custom-package">
-      <h3>Bronze Package</h3>
-      <ul>
-        <li>Room decorations - balloons, banners</li>
-        <li>Table decorations - centrepieces, gifts</li>
-        <li>DJ entertainment</li>
-        <li>Cold buffet</li>
-        <li>-</li>
-      </ul>
-      <p>Price: $XXX</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-    <div class="banner-image">
-      <img src="IMG/b.jpg" alt="Party Time Banner">
-    </div>
-  </section>
+<section class="banner-container">
+<div class="custom-package">
+<h3>Bronze Package</h3>
+<ul>
+<li>Room decorations</li>
+<li>Table decorations</li>
+<li>DJ entertainment</li>
+<li>Cold buffet</li>
+</ul>
+<p>Price: $XXX</p>
+<a href="#" class="btn">Book Now</a>
+</div>
+<div class="banner-image">
+<img src="images/b.jpg" alt="">
+</div>
+</section>
 
-  <section class="banner-container">
-    <div class="banner-image">
-      <img src="IMG/s.jpg" alt="">
-    </div>
-    <div class="custom-package">
-      <h3>Silver Package</h3>
-      <ul>
-        <li>All from Bronze package plus:</li>
-        <li>Invitation design and handling</li>
-        <li>Party cost clear up</li>
-        <li>Live band entertainment</li>
-        <li>Cold buffet and soft drinks</li>
-      </ul>
-      <p>Price: $XXX</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-  </section>
+<section class="banner-container">
+<div class="banner-image">
+<img src="images/s.jpg" alt="">
+</div>
+<div class="custom-package">
+<h3>Silver Package</h3>
+<ul>
+<li>All from Bronze package plus:</li>
+<li>Invitation design</li>
+<li>Party cleanup</li>
+<li>Live band</li>
+<li>Cold buffet and drinks</li>
+</ul>
+<p>Price: $XXX</p>
+<a href="#" class="btn">Book Now</a>
+</div>
+</section>
 
-  <section class="banner-container">
-    <div class="custom-package">
-      <h3>Gold Package</h3>
-      <ul>
-        <li>All from Silver package plus:</li>
-        <li>Staff in attendance to ensure complete perfection</li>
-        <li>Finding guest accommodation, booking transport</li>
-        <li>Live band entertainment and magician</li>
-        <li>Hot and Cold buffet and soft drinks</li>
-      </ul>
-      <p>Price: $XXX</p>
-      <a href="#" class="btn" role="button">Book Now</a>
-    </div>
-    <div class="banner-image">
-      <img src="IMG/g.jpg" alt="">
-    </div>
-  </section>
+<section class="banner-container">
+<div class="custom-package">
+<h3>Gold Package</h3>
+<ul>
+<li>All from Silver package plus:</li>
+<li>Staff attendance</li>
+<li>Accommodation & transport</li>
+<li>Live band and magician</li>
+<li>Hot & Cold buffet</li>
+</ul>
+<p>Price: $XXX</p>
+<a href="#" class="btn">Book Now</a>
+</div>
+<div class="banner-image">
+<img src="images/g.jpg" alt="">
+</div>
+</section>
 
+<footer>
 
+<div class="about-us">
+<h3>About Us</h3>
+<ul>
+<li>Party Time is your premier destination for unforgettable events.</li>
+<li>With our expert team and wide range of services.</li>
+</ul>
+</div>
 
+<div class="container">
 
-  
-  
+<div class="services">
+<h3>Package</h3>
+<ul>
+<li>Bronze Package</li>
+<li>Silver Package</li>
+<li>Gold Package</li>
+</ul>
+</div>
 
- 
+<div class="services">
+<h3>Our Services</h3>
+<ul>
+<li>Themed Events</li>
+<li>Marquee Parties</li>
+<li>Special Celebrations</li>
+</ul>
+</div>
 
+<div class="services">
+<h3>Contact Address</h3>
+<ul>
+<li>Room No.216, Time City Complex, Yangon</li>
+<li>+959943940323</li>
+</ul>
+</div>
 
+</div>
 
-  <footer>
-    <div class="about-us">
-      <h3>About Us</h3>
-      <ul>
-        <li>Party Time is your premier destination for unforgettable events and celebrations.</li>
-        <li>With our expert team and wide range of services, we ensure that every occasion is a spectacular success.</li>
-      </ul>
-    </div>
-    <div class="container">
-      <div class="services">
-        <h3>Package</h3>
-        <ul>
-          <li>Bronze Package</li>
-          <li>Silver Package</li>
-          <li>Gold Package</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Our Services</h3>
-        <ul>
-          <li>Themed Events</li>
-          <li>Marquee Parties</li>
-          <li>Special Celebrations</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Contact Address</h3>
-        <ul>
-          <li>Room No.216, Shop House No.2, Time City Complex, <br> Kamayut Township, Yangon</li>
-          <li>Call Now; +959943940323</li>
-        </ul>
-      </div>
-    </div>
-    <p>&copy; 2024 Party Time. All rights reserved SOE MOE NAING.</p>
-  </footer>
+<p>&copy; 2024 Party Time — SOE MOE NAING</p>
+
+</footer>
 
 </body>
 </html>
-
 
 
 
