--- a/serives.html
+++ b/serives.html
@@ -304,116 +304,135 @@ section {
 
 </style>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><img src="IMG/logo.png" alt=""></li>
-        <li><a href="index.html">Home Page</a></li>
-        <li><a href="aboutup.html">About Us</a></li>
-        <li><a href="serives.html">Services</a></li>
-        <li><a href="package.html">Packages</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
-    </nav>
+
+<header>
+<nav>
+<ul>
+<li><img src="images/logo.png" alt=""></li>
+<li><a href="index.html">Home Page</a></li>
+<li><a href="aboutup.html">About Us</a></li>
+<li><a href="serives.html">Services</a></li>
+<li><a href="package.html">Packages</a></li>
+<li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
 </header>
 
-  <section id="services">
-    <div class="container">
-      <div class="service">
-        <img src="IMG/stm.jpg" alt="Themed Events">
-        <h2>Themed Events</h2>
-        <p>Transform your event into a themed extravaganza with our creative themes and decorations.</p>
-      </div>
-      <div class="service">
-        <img src="IMG/sss.jpg" alt="Marquee Parties">
-        <h2>Marquee Parties</h2>
-        <p>Host your event outdoors with our marquee party setups, perfect for any celebration.</p>
-      </div>
-      <div class="service">
-        <img src="IMG/ssc.jpeg" alt="Special Celebrations">
-        <h2>Special Celebrations</h2>
-        <p>Make your special day unforgettable with our tailored celebration planning services.</p>
-      </div>
-    </div>
-  </section>
+<section id="services">
+<div class="container">
 
-  <section id="services">
-    <div class="container">
-      <div class="service">
-        <img src="IMG/sen.jpg" alt="Themed Events">
-        <h2>Entertainment</h2>
-        <p>Partner with us to host impactful fundraisers that combine purpose with a touch of elegance.</p>
-      </div>
-      <div class="service">
-        <img src="IMG/smp.jpg" alt="Marquee Parties">
-        <h2>Fundraisers</h2>
-        <p>Host your event outdoors with our marquee party setups, perfect for any celebration.</p>
-      </div>
-      <div class="service">
-        <img src="IMG/food.jpg" alt="Special Celebrations">
-        <h2>Bespoke catering</h2>
-        <p>Make your special day unforgettable with our tailored celebration planning services.</p>
-      </div>
-    </div>
-  </section>
+<div class="service">
+<img src="images/stm.jpg" alt="">
+<h2>Themed Events</h2>
+<p>Transform your event into a themed extravaganza.</p>
+</div>
 
-  <section id="services">
-    <div class="container">
-      <div class="service">
-        <img src="IMG/st.jpg" alt="Themed Events">
-        <h2>Themes</h2>
-        <p>Enhance the visual appeal of your event with our curated collection of themes and props, creating a cohesive and immersive experience.</p>
-      </div>
-      <div class="service">
-        <img src="IMG/sm.jpg" alt="Marquee Parties">
-        <h2>Sounds</h2>
-        <p>Immerse your event in a captivating audio-visual experience with our state-of-the-art sound and lighting solutions.</p>
-      </div>
-      <div class="service">
-        <img src="IMG/sl.jpg" alt="Special Celebrations">
-        <h2>Lighting</h2>
-        <p>Immerse your event in a captivating audio-visual experience with our state-of-the-art sound and lighting solutions.</p>
-      </div>
-    </div>
-  </section>
-  
-  
+<div class="service">
+<img src="images/sss.jpg" alt="">
+<h2>Marquee Parties</h2>
+<p>Host your event outdoors with our marquee setups.</p>
+</div>
 
-  <footer>
-    <div class="about-us">
-      <h3>About Us</h3>
-      <ul>
-        <li>Party Time is your premier destination for unforgettable events and celebrations.</li>
-        <li>With our expert team and wide range of services, we ensure that every occasion is a spectacular success.</li>
-      </ul>
-    </div>
-    <div class="container">
-      <div class="services">
-        <h3>Package</h3>
-        <ul>
-          <li>Bronze Package</li>
-          <li>Silver Package</li>
-          <li>Gold Package</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Our Services</h3>
-        <ul>
-          <li>Themed Events</li>
-          <li>Marquee Parties</li>
-          <li>Special Celebrations</li>
-        </ul>
-      </div>
-      <div class="services">
-        <h3>Contact Address</h3>
-        <ul>
-          <li>Room No.216, Shop House No.2, Time City Complex, <br> Kamayut Township, Yangon</li>
-          <li>Call Now; +959943940323</li>
-        </ul>
-      </div>
-    </div>
-    <p>&copy; 2024 Party Time. All rights reserved SOE MOE NAING.</p>
-  </footer>
+<div class="service">
+<img src="images/ssc.jpeg" alt="">
+<h2>Special Celebrations</h2>
+<p>Make your special day unforgettable.</p>
+</div>
+
+</div>
+</section>
+
+<section id="services">
+<div class="container">
+
+<div class="service">
+<img src="images/sen.jpg" alt="">
+<h2>Entertainment</h2>
+<p>Partner with us to host impactful fundraisers.</p>
+</div>
+
+<div class="service">
+<img src="images/smp.jpg" alt="">
+<h2>Fundraisers</h2>
+<p>Perfect outdoor celebrations and events.</p>
+</div>
+
+<div class="service">
+<img src="images/food.jpg" alt="">
+<h2>Bespoke catering</h2>
+<p>Tailored celebration planning services.</p>
+</div>
+
+</div>
+</section>
+
+<section id="services">
+<div class="container">
+
+<div class="service">
+<img src="images/st.jpg" alt="">
+<h2>Themes</h2>
+<p>Enhance the visual appeal with curated themes.</p>
+</div>
+
+<div class="service">
+<img src="images/sm.jpg" alt="">
+<h2>Sounds</h2>
+<p>State-of-the-art sound and lighting solutions.</p>
+</div>
+
+<div class="service">
+<img src="images/sl.jpg" alt="">
+<h2>Lighting</h2>
+<p>Create immersive lighting experiences.</p>
+</div>
+
+</div>
+</section>
+
+<footer>
+
+<div class="about-us">
+<h3>About Us</h3>
+<ul>
+<li>Party Time is your premier destination for unforgettable events.</li>
+<li>With our expert team and wide range of services.</li>
+</ul>
+</div>
+
+<div class="container">
+
+<div class="services">
+<h3>Package</h3>
+<ul>
+<li>Bronze Package</li>
+<li>Silver Package</li>
+<li>Gold Package</li>
+</ul>
+</div>
+
+<div class="services">
+<h3>Our Services</h3>
+<ul>
+<li>Themed Events</li>
+<li>Marquee Parties</li>
+<li>Special Celebrations</li>
+</ul>
+</div>
+
+<div class="services">
+<h3>Contact Address</h3>
+<ul>
+<li>Room No.216, Time City Complex, Yangon</li>
+<li>+959943940323</li>
+</ul>
+</div>
+
+</div>
+
+<p>&copy; 2024 Party Time — SOE MOE NAING</p>
+
+</footer>
 
 </body>
 </html>
